--- a/public/new_spain/index.html
+++ b/public/new_spain/index.html
@@ -8,12 +8,12 @@
           content="ie=edge">
 
     <!-- Preload critical CSS for faster rendering -->
-    <link rel="preload" href="/new_spain/css/style.css" as="style">
-    <link rel="preload" href="/new_spain/fonts/stylesheet.css" as="style">
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="preload" href="fonts/stylesheet.css" as="style">
 
     <!-- Apply styles immediately -->
-    <link href="/new_spain/fonts/stylesheet.css" rel="stylesheet">
-    <link rel="stylesheet" href="/new_spain/css/style.css">
+    <link href="/fonts/stylesheet.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
 
     <link rel="icon" type="image/png" href="/new_spain/img/favicon.png"/>
     <title>Top Betting Online</title>
