--- a/src/assets/new_spain/index.html
+++ b/src/assets/new_spain/index.html
@@ -9,14 +9,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- Preload critical CSS for faster rendering -->
-    <link rel="preload" href="/new_spain/css/style.css" as="style" />
-    <link rel="preload" href="/new_spain/fonts/stylesheet.css" as="style" />
+    <link rel="preload" href="/api/styles?file=style.css" as="style" />
+    <link rel="preload" href="/api/fonts?file=stylesheet.css" as="style" />
 
     <!-- Apply styles immediately -->
-    <link href="/new_spain/fonts/stylesheet.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/new_spain/css/style.css" />
+    <link href="/api/fonts?file=stylesheet.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/api/styles?file=style.css" />
 
-    <link rel="icon" type="image/png" href="/new_spain/img/favicon.png" />
+    <link rel="icon" type="image/png" href="/api/images?image=favicon.png" />
     <title>Top Betting Online</title>
   </head>
   <body>
@@ -32,7 +32,7 @@
           <div class="popup-content">
             <img
               style="width: 200px"
-              src="/new_spain/img/boomerang.svg"
+              src="/api/images?image=boomerang.svg"
               alt="Vegas Logo"
               class="logo"
             />
@@ -42,46 +42,35 @@
             </h2>
             <div
               class="stars"
-              style="
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                gap: 5px;
-              "
+              style="display: flex; align-items: center; justify-content: center; gap: 5px;"
             >
               <img
-                src="/new_spain/img/star_icon.svg"
+                src="/api/images?image=star_icon.svg"
                 alt=""
                 style="vertical-align: middle"
               />
               <img
-                src="/new_spain/img/star_icon.svg"
+                src="/api/images?image=star_icon.svg"
                 alt=""
                 style="vertical-align: middle"
               />
               <img
-                src="/new_spain/img/star_icon.svg"
+                src="/api/images?image=star_icon.svg"
                 alt=""
                 style="vertical-align: middle"
               />
               <img
-                src="/new_spain/img/star_icon.svg"
+                src="/api/images?image=star_icon.svg"
                 alt=""
                 style="vertical-align: middle"
               />
               <img
-                src="/new_spain/img/star_icon.svg"
+                src="/api/images?image=star_icon.svg"
                 alt=""
                 style="vertical-align: middle"
               />
               <p
-                style="
-                  font-weight: 700;
-                  color: #171717;
-                  font-size: 24px !important;
-                  padding-bottom: 0px;
-                  margin: 0;
-                "
+                style="font-weight: 700; color: #171717; font-size: 24px !important; padding-bottom: 0px; margin: 0;"
                 class="textinfo"
               >
                 10.0<span style="font-weight: 700; font-size: 16px">/10</span>
@@ -98,7 +87,7 @@
       <header>
         <div class="container">
           <a href="/" class="logo"
-            ><img style="width: 170px" src="/new_spain/img/logotype.svg" alt=""
+            ><img style="width: 170px" src="/api/images?image=logotype.svg" alt=""
           /></a>
         </div>
       </header>
@@ -117,15 +106,15 @@
           </p>
           <div class="items">
             <div class="item">
-              <img class="img-icon" src="/new_spain/img/Group 1.svg" alt="" />
+              <img class="img-icon" src="/api/images?image=Group 1.svg" alt="" />
               <span>Seguro & Fiable</span>
             </div>
             <div class="item">
-              <img class="img-icon" src="/new_spain/img/Group 2.svg" alt="" />
+              <img class="img-icon" src="/api/images?image=Group 2.svg" alt="" />
               <span>Retiradas Rápidas</span>
             </div>
             <div class="item">
-              <img class="img-icon" src="/new_spain/img/Group 3.svg" alt="" />
+              <img class="img-icon" src="/api/images?image=Group 3.svg" alt="" />
               <span>Bonos Elevados</span>
             </div>
           </div>
@@ -204,16 +193,16 @@
                   <img
                     class="logo_img"
                     width="170px"
-                    src="/new_spain/img/boomerang.svg"
+                    src="/api/images?image=boomerang.svg"
                     alt=""
                   />
                   <div class="rating_mob">
                     <div class="stars">
-                      <img src="/new_spain/img/star_icon.svg" alt="" />
-                      <img src="/new_spain/img/star_icon.svg" alt="" />
-                      <img src="/new_spain/img/star_icon.svg" alt="" />
-                      <img src="/new_spain/img/star_icon.svg" alt="" />
-                      <img src="/new_spain/img/star_icon.svg" alt="" />
+                      <img src="/api/images?image=star_icon.svg" alt="" />
+                      <img src="/api/images?image=star_icon.svg" alt="" />
+                      <img src="/api/images?image=star_icon.svg" alt="" />
+                      <img src="/api/images?image=star_icon.svg" alt="" />
+                      <img src="/api/images?image=star_icon.svg" alt="" />
                     </div>
                     <p>10.0</p>
                     <div class="votes">Votes (14,546)</div>
@@ -239,20 +228,12 @@
                 <div>
                   <div class="info">
                     <p
-                      style="
-                        font-size: 14px;
-                        font-weight: 500;
-                        text-align: center;
-                      "
+                      style="font-size: 14px; font-weight: 500; text-align: center"
                     >
                       BONIFICACIÓN POR NUEVO CLIENTE
                     </p>
                     <h3
-                      style="
-                        font-weight: 700;
-                        font-size: 20px;
-                        text-align: center;
-                      "
+                      style="font-weight: 700; font-size: 20px; text-align: center"
                     >
                       200€
                     </h3>
@@ -276,7 +257,7 @@
         <a href="/" class="logo"
           ><img
             style="width: 170px"
-            src="/new_spain/img/logotype_footer.svg"
+            src="/api/images?image=logotype_footer.svg"
             alt=""
         /></a>
         <div class="items">
@@ -308,6 +289,6 @@
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"
     ></script>
-    <script src="/new_spain/js/site.js"></script>
+    <script src="/api/images?image=site.js"></script>
   </body>
 </html>
