--- a/src/assets/new_spain/index.html
+++ b/src/assets/new_spain/index.html
@@ -9,14 +9,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- Preload critical CSS for faster rendering -->
-    <link rel="preload" href="/api/styles?file=style.css" as="style" />
-    <link rel="preload" href="/api/fonts?file=stylesheet.css" as="style" />
+    <link rel="preload" href="/assets/new_spain/css/style.css" as="style" />
+    <link
+      rel="preload"
+      href="/assets/new_spain/fonts/stylesheet.css"
+      as="style"
+    />
 
     <!-- Apply styles immediately -->
-    <link href="/api/fonts?file=stylesheet.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/api/styles?file=style.css" />
+    <link href="/assets/new_spain/fonts/stylesheet.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/assets/new_spain/css/style.css" />
 
-    <link rel="icon" type="image/png" href="/api/images?image=favicon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/assets/new_spain/img/favicon.png"
+    />
     <title>Top Betting Online</title>
   </head>
   <body>
@@ -32,7 +40,7 @@
           <div class="popup-content">
             <img
               style="width: 200px"
-              src="/api/images?image=boomerang.svg"
+              src="/assets/new_spain/img/boomerang.svg"
               alt="Vegas Logo"
               class="logo"
             />
@@ -42,35 +50,46 @@
             </h2>
             <div
               class="stars"
-              style="display: flex; align-items: center; justify-content: center; gap: 5px;"
+              style="
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 5px;
+              "
             >
               <img
-                src="/api/images?image=star_icon.svg"
+                src="/assets/new_spain/img/star_icon.svg"
                 alt=""
                 style="vertical-align: middle"
               />
               <img
-                src="/api/images?image=star_icon.svg"
+                src="/assets/new_spain/img/star_icon.svg"
                 alt=""
                 style="vertical-align: middle"
               />
               <img
-                src="/api/images?image=star_icon.svg"
+                src="/assets/new_spain/img/star_icon.svg"
                 alt=""
                 style="vertical-align: middle"
               />
               <img
-                src="/api/images?image=star_icon.svg"
+                src="/assets/new_spain/img/star_icon.svg"
                 alt=""
                 style="vertical-align: middle"
               />
               <img
-                src="/api/images?image=star_icon.svg"
+                src="/assets/new_spain/img/star_icon.svg"
                 alt=""
                 style="vertical-align: middle"
               />
               <p
-                style="font-weight: 700; color: #171717; font-size: 24px !important; padding-bottom: 0px; margin: 0;"
+                style="
+                  font-weight: 700;
+                  color: #171717;
+                  font-size: 24px !important;
+                  padding-bottom: 0px;
+                  margin: 0;
+                "
                 class="textinfo"
               >
                 10.0<span style="font-weight: 700; font-size: 16px">/10</span>
@@ -87,7 +106,10 @@
       <header>
         <div class="container">
           <a href="/" class="logo"
-            ><img style="width: 170px" src="/api/images?image=logotype.svg" alt=""
+            ><img
+              style="width: 170px"
+              src="/assets/new_spain/img/logotype.svg"
+              alt=""
           /></a>
         </div>
       </header>
@@ -106,15 +128,27 @@
           </p>
           <div class="items">
             <div class="item">
-              <img class="img-icon" src="/api/images?image=Group 1.svg" alt="" />
+              <img
+                class="img-icon"
+                src="/assets/new_spain/img/Group 1.svg"
+                alt=""
+              />
               <span>Seguro & Fiable</span>
             </div>
             <div class="item">
-              <img class="img-icon" src="/api/images?image=Group 2.svg" alt="" />
+              <img
+                class="img-icon"
+                src="/assets/new_spain/img/Group 2.svg"
+                alt=""
+              />
               <span>Retiradas Rápidas</span>
             </div>
             <div class="item">
-              <img class="img-icon" src="/api/images?image=Group 3.svg" alt="" />
+              <img
+                class="img-icon"
+                src="/assets/new_spain/img/Group 3.svg"
+                alt=""
+              />
               <span>Bonos Elevados</span>
             </div>
           </div>
@@ -175,80 +209,8 @@
             </div>
           </div>
         </div>
-        <div class="line_info">
-          <div class="line">Casa de Apuestas</div>
-          <div class="line">Oferta de Bonificación</div>
-          <div class="line">Puntuación</div>
-          <div class="line">Valoración del Usuario</div>
-          <div class="line">Visitar el Sitio</div>
-        </div>
-        <div class="items">
-          <div class="item">
-            <div class="badge-container">
-              <div class="label-hot">#1 MEJOR CASA DE APUESTAS</div>
-            </div>
-            <div class="table">
-              <div class="tr">
-                <div>
-                  <img
-                    class="logo_img"
-                    width="170px"
-                    src="/api/images?image=boomerang.svg"
-                    alt=""
-                  />
-                  <div class="rating_mob">
-                    <div class="stars">
-                      <img src="/api/images?image=star_icon.svg" alt="" />
-                      <img src="/api/images?image=star_icon.svg" alt="" />
-                      <img src="/api/images?image=star_icon.svg" alt="" />
-                      <img src="/api/images?image=star_icon.svg" alt="" />
-                      <img src="/api/images?image=star_icon.svg" alt="" />
-                    </div>
-                    <p>10.0</p>
-                    <div class="votes">Votes (14,546)</div>
-                  </div>
-                </div>
-              </div>
-              <div class="tr mobile">
-                <p class="two">
-                  BONIFICACIÓN POR<br />
-                  NUEVO CLIENTE
-                  <br />
-                  <span>200€</span>
-                </p>
-              </div>
-              <div class="tr mobile">
-                <div>
-                  <div class="rating_pc">
-                    <p>10.0</p>
-                  </div>
-                </div>
-              </div>
-              <div class="tr">
-                <div>
-                  <div class="info">
-                    <p
-                      style="font-size: 14px; font-weight: 500; text-align: center"
-                    >
-                      BONIFICACIÓN POR NUEVO CLIENTE
-                    </p>
-                    <h3
-                      style="font-weight: 700; font-size: 20px; text-align: center"
-                    >
-                      200€
-                    </h3>
-                  </div>
-                  <a
-                    href="https://boomerang-bet616356.com/de/"
-                    class="btnactive"
-                    >BONO COLECCIÓN</a
-                  >
-                  <p class="btn_btext">Visitar el Sitio Web</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+
+        <!-- Content of the Sites Section -->
       </div>
     </section>
 
@@ -257,7 +219,7 @@
         <a href="/" class="logo"
           ><img
             style="width: 170px"
-            src="/api/images?image=logotype_footer.svg"
+            src="/assets/new_spain/img/logotype_footer.svg"
             alt=""
         /></a>
         <div class="items">
@@ -289,6 +251,6 @@
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"
     ></script>
-    <script src="/api/images?image=site.js"></script>
+    <script src="/assets/new_spain/js/site.js"></script>
   </body>
 </html>
