--- a/src/assets/new_spain/index.html
+++ b/src/assets/new_spain/index.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
-<html lang="es">
-  <<head>
+<html lang="en">
+  <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Top Betting Online</title>
 
-    <!-- Preload critical CSS -->
-    <link rel="preload" href="/api/styles?file=style.css" as="style" />
-    <link rel="preload" href="/api/fonts?file=stylesheet.css" as="style" />
+    <!-- Preload critical CSS for faster rendering -->
+    <link rel="preload" href="/api/styles?name=style.css" as="style" />
+    <link rel="preload" href="/api/fonts?name=stylesheet.css" as="style" />
 
-    <!-- Load CSS -->
-    <link href="/api/fonts?file=stylesheet.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/api/styles?file=style.css" />
+    <!-- Apply styles immediately -->
+    <link href="/api/fonts?name=stylesheet.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/api/styles?name=style.css" />
 
-    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/api/image?image=favicon.png" />
+    <title>Top Betting Online</title>
   </head>
-
   <body>
     <main>
       <div id="popup-container" class="hidden">
         <div class="popup">
           <button id="close-popup" class="close-btn">✖</button>
           <div class="banner">
-            <span style="color: #fff; font-weight: 700">
-              LA MEJOR CASA DE APUESTAS
-            </span>
+            <span style="color: #fff; font-weight: 700"
+              >LA MEJOR CASA DE APUESTAS</span
+            >
           </div>
           <div class="popup-content">
             <img
@@ -84,30 +82,28 @@
                   padding-bottom: 0px;
                   margin: 0;
                 "
+                class="textinfo"
               >
                 10.0<span style="font-weight: 700; font-size: 16px">/10</span>
               </p>
             </div>
             <br />
-            <a href="https://boomerang-bet616356.com/de/" class="play-btn">
-              BONO COLECCIÓN
-            </a>
+            <a href="https://boomerang-bet616356.com/de/" class="play-btn"
+              >BONO COLECCIÓN</a
+            >
           </div>
         </div>
       </div>
-
       <header>
         <div class="container">
-          <a href="/" class="logo">
-            <img
+          <a href="/" class="logo"
+            ><img
               style="width: 170px"
               src="/api/image?image=logotype.svg"
-              alt="Logo"
-            />
-          </a>
+              alt=""
+          /></a>
         </div>
       </header>
-
       <div class="container">
         <div class="content">
           <h1>
@@ -116,16 +112,14 @@
           </h1>
           <p>
             En España hay numerosas casas de apuestas que ofrecen oportunidades
-            seguras y atractivas para apostar. Las mejores casas de apuestas se
-            caracterizan por plataformas fáciles de usar, cuotas lucrativas y
-            una amplia gama de opciones de apuestas.
+            seguras y atractivas para apostar...
           </p>
           <div class="items">
             <div class="item">
               <img
                 class="img-icon"
                 src="/api/image?image=Group%201.svg"
-                alt="Seguro"
+                alt=""
               />
               <span>Seguro & Fiable</span>
             </div>
@@ -133,7 +127,7 @@
               <img
                 class="img-icon"
                 src="/api/image?image=Group%202.svg"
-                alt="Rápidas"
+                alt=""
               />
               <span>Retiradas Rápidas</span>
             </div>
@@ -141,7 +135,7 @@
               <img
                 class="img-icon"
                 src="/api/image?image=Group%203.svg"
-                alt="Bonos"
+                alt=""
               />
               <span>Bonos Elevados</span>
             </div>
@@ -150,49 +144,26 @@
       </div>
     </main>
 
-    <section class="sites" id="sites">
-      <div class="container">
-        <div class="marquee-wrapper">
-          <div class="label">Próximos Partidos</div>
-          <div class="marquee">
-            <div class="marquee-inner">
-              <div class="marquee-content">
-                <div class="block">
-                  <p style="font-weight: 700">West Ham vs West Ham</p>
-                  11 Jan 12:00 pm
-                </div>
-                <div class="block">
-                  <p style="font-weight: 700">Bristol City vs Wolves</p>
-                  11 Jan 12:00 pm
-                </div>
-                <div class="block">
-                  <p style="font-weight: 700">Liverpool vs Accrington</p>
-                  11 Jan 12:15 pm
-                </div>
-                <div class="block">
-                  <p style="font-weight: 700">Leicester vs QPR</p>
-                  11 Jan 3:00 pm
-                </div>
-                <div class="block">
-                  <p style="font-weight: 700">Bournemouth vs West Brom</p>
-                  11 Jan 3:00 pm
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    <!-- Далі блоки з таблицями аналогічно -->
+    <!-- ПРИКЛАД однієї заміни: -->
+    <img
+      class="logo_img"
+      width="170px"
+      src="/api/image?image=boomerang.svg"
+      alt=""
+    />
+    <img src="/api/image?image=star_icon.svg" alt="" />
+
+    <!-- І так далі для кожного шляху, де раніше було /new_spain/img/… -->
 
     <footer>
       <div class="container">
-        <a href="/" class="logo">
-          <img
+        <a href="/" class="logo"
+          ><img
             style="width: 170px"
             src="/api/image?image=logotype_footer.svg"
             alt=""
-          />
-        </a>
+        /></a>
         <div class="items">
           Important! All games presented on the sites are available only to
           persons over 18 years of age.
@@ -214,12 +185,11 @@
         });
       });
     </script>
-
     <script
       src="https://code.jquery.com/jquery-3.7.1.min.js"
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"
     ></script>
-    <script src="/api/js?file=site.js"></script>
+    <script src="/api/js?name=site.js"></script>
   </body>
 </html>
