--- a/src/assets/new_spain/index.html
+++ b/src/assets/new_spain/index.html
@@ -7,7 +7,11 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
+    <style>
+      body {
+        border: 5px solid red;
+      }
+    </style>
     <!-- Preload critical CSS -->
     <link rel="preload" href="/api/styles?file=style.css" as="style" />
     <link rel="preload" href="/api/fonts?file=stylesheet.css" as="style" />
